Align Numeric columns to the right in ag-Grid. fix #3

--- a/DemoPage/aggriddemo.css
+++ b/DemoPage/aggriddemo.css
@@ -5,3 +5,7 @@ height: 100%
 #grid{
     height: 80%
 }
+
+    .number-cell {
+        text-align: right;
+    }
